--- a/.gitignore
+++ b/.gitignore
@@ -194,4 +194,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Project specific
+configs/
+results/
+
 # End of https://www.gitignore.io/api/python,pycharm
