--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,10 @@
 name: movement
 channels:
-  - defaults
   - conda-forge
-  - https://repo.continuum.io/pkgs/main/win-64/
+  - defaults
 dependencies:
   - alabaster=0.7.12=py_0
+  - altgraph=0.17=py_0
   - asn1crypto=1.3.0=py37_0
   - astroid=2.3.3=py37_0
   - attrs=19.3.0=py_0
@@ -12,7 +12,6 @@ dependencies:
   - backcall=0.1.0=py37_0
   - blas=1.0=mkl
   - bleach=3.1.0=py_0
-  - bokeh=2.0.1=py37_0
   - bzip2=1.0.8=he774522_0
   - ca-certificates=2020.1.1=0
   - certifi=2020.4.5.1=py37_0
@@ -33,12 +32,11 @@ dependencies:
   - descartes=1.1.0=py_4
   - docutils=0.16=py37_0
   - entrypoints=0.3=py37_0
-  - et_xmlfile=1.0.1=py37_0
   - expat=2.2.5=he025d50_0
   - fiona=1.8.4=py37h22081e2_0
   - freetype=2.9.1=ha9979f8_1
   - freexl=1.0.5=hfa6e2cd_0
-  - ftfy=5.7=py_0
+  - future=0.18.2=py37_0
   - gdal=2.3.3=py37hdf43c64_0
   - geopandas=0.6.1=py_0
   - geos=3.7.1=h33f27b4_0
@@ -55,7 +53,6 @@ dependencies:
   - ipython=7.13.0=py37h5ca1d4c_0
   - ipython_genutils=0.2.0=py37_0
   - isort=4.3.21=py37_0
-  - jdcal=1.4.1=py_0
   - jedi=0.16.0=py37_1
   - jinja2=2.11.1=py_0
   - joblib=0.14.1=py_0
@@ -82,6 +79,7 @@ dependencies:
   - libssh2=1.9.0=h7a1dbc1_1
   - libtiff=4.1.0=h56a325e_0
   - libxml2=2.9.9=h464c3ec_0
+  - macholib=1.11=py_0
   - mapclassify=2.2.0=py_0
   - markupsafe=1.1.1=py37he774522_0
   - matplotlib=3.1.3=py37_0
@@ -98,8 +96,6 @@ dependencies:
   - numpy=1.18.1=py37h93ca92e_0
   - numpy-base=1.18.1=py37hc3f5095_1
   - numpydoc=0.9.2=py_0
-  - olefile=0.46=py_0
-  - openpyxl=3.0.3=py_0
   - openssl=1.1.1g=he774522_0
   - packaging=20.3=py_0
   - pandas=1.0.3=py37h47e9c7a_0
@@ -107,43 +103,45 @@ dependencies:
   - pandocfilters=1.4.2=py37_1
   - parso=0.6.2=py_0
   - pcre=8.43=ha925a31_0
+  - pefile=2019.4.18=py_0
   - pickleshare=0.7.5=py37_0
-  - pillow=7.0.0=py37hcc1f983_0
   - pip=20.0.2=py37_1
   - proj4=5.2.0=ha925a31_1
   - prompt_toolkit=3.0.3=py_0
   - psutil=5.7.0=py37he774522_0
   - pycodestyle=2.5.0=py37_0
   - pycparser=2.20=py_0
+  - pycrypto=2.6.1=py37hfa6e2cd_9
+  - pycryptodome=3.8.2=py37he774522_0
   - pyflakes=2.1.1=py37_0
   - pygments=2.6.1=py_0
+  - pyinstaller=3.6=py37h2a8f88b_1
   - pylint=2.4.4=py37_0
   - pyopenssl=19.1.0=py37_0
   - pyparsing=2.4.6=py_0
   - pyproj=1.9.6=py37h6782396_0
   - pyqt=5.9.2=py37h6538335_2
-  - pyqtgraph=0.10.0=pyh91ea838_3
   - pyreadline=2.1=py37_1
   - pyrsistent=0.15.7=py37he774522_0
   - pysocks=1.7.1=py37_0
   - python=3.7.7=h60c2a47_0_cpython
   - python-dateutil=2.8.1=py_0
+  - python_abi=3.7=1_cp37m
   - pytz=2019.3=py_0
   - pywin32=227=py37he774522_1
   - pywin32-ctypes=0.2.0=py37_1000
-  - pyyaml=5.3.1=py37he774522_0
   - pyzmq=18.1.1=py37ha925a31_0
   - qt=5.9.7=vc14h73c81de_0
   - qtawesome=0.7.0=py_0
   - qtconsole=4.7.1=py_0
   - qtpy=1.9.0=py_0
-  - regex=2020.2.20=py37he774522_0
+  - regex=2020.4.4=py37h8055547_0
   - requests=2.23.0=py37_0
   - rope=0.16.0=py_0
   - rtree=0.9.3=py37h21ff451_0
   - scikit-learn=0.22.1=py37h6288b17_0
   - scipy=1.4.1=py37h9439919_0
-  - setuptools=46.1.1=py37_0
+  - setuptools=44.0.0=py37_0
   - shapely=1.6.4=py37h222a598_0
   - sip=4.19.8=py37h6538335_0
   - six=1.14.0=py37_0
@@ -163,8 +161,7 @@ dependencies:
   - tornado=6.0.4=py37he774522_1
   - tqdm=4.43.0=py_0
   - traitlets=4.3.3=py37_0
-  - typing_extensions=3.7.4.1=py37_0
-  - tzlocal=2.0.0=py37_0
+  - tzlocal=2.0.0=py_0
   - urllib3=1.25.8=py37_0
   - vc=14.1=h0510ff6_4
   - vs2015_runtime=14.16.27012=hf0eaf9b_1
@@ -176,10 +173,9 @@ dependencies:
   - wrapt=1.12.1=py37he774522_1
   - xerces-c=3.2.2=ha925a31_0
   - xz=5.2.4=h2fa13f4_4
-  - yaml=0.1.7=hc54c509_2
   - zeromq=4.3.1=h33f27b4_3
   - zipp=2.2.0=py_0
   - zlib=1.2.11=h62dcd97_3
   - zstd=1.3.7=h508b16e_0
-prefix: C:\Anaconda\envs\movement
+prefix: C:\Users\Alex\.conda\envs\movement
 
